2004-07-07  Vladimir Makarov  <vmakarov@redhat.com>

PR target/16130
	PR target/16142
	PR target/16143
	* config/ia64/ia64.c (ia64_dfa_new_cycle): Reset DFA state for asm
	insn.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@84202 138bc75d-0d04-0410-961f-82ee72b054a4